Initial updates to add new logos

--- a/website/index.html
+++ b/website/index.html
@@ -70,6 +70,7 @@
     </h2>
 </noscript>
 <div id="divSystemAdvisory" align="center">
+    <img id="imgCARMAColor" src="images/CARMA_color.png" style="width:50%; height:50%;" />
     <h1 style="color: blue">
         Welcome to CAV Prototype I
         <br/>
