--- a/website/logout.html
+++ b/website/logout.html
@@ -28,6 +28,7 @@
     </h2>
 </noscript>
 <div id="divSystemAdvisory" align="center">
+    <img id="imgCARMAColor" src="images/CARMA_color.png" style="width:50%; height:50%;" />
     <h1 style="color: blue">Goodbye and thank you for using CAV Prototype I!</h1>
 
     <!--<h2 style="color: red"><u>System Advisory</u></h2>-->
@@ -37,7 +38,7 @@
         </i>
     </h2>
     <!-- TODO: Get better description from team on logout instructions. -->
-    <h3>To re-engage Guidance, please close this browser and contact your system administrator to re-launch the system.</h3>
+    <h3>Please close this window.</h3>
     <br />
 </div>
 </body>
