--- a/website/main.html
+++ b/website/main.html
@@ -75,6 +75,7 @@
         <button class="tablinks" onclick="openTab(event, 'divMap')"><i class="fa fa-map" aria-hidden="true"></i><span class="tabName">&nbsp;Map</span></button>
         <button class="tablinks" onclick="openTab(event, 'divSystemStatus')"><i class="fa fa-info-circle" aria-hidden="true"></i><span class="tabName">&nbsp;Status</span></button>
         <button class="tablinks" onclick="openTab(event, 'divSystemLogs')"><i class="fa fa-file-text" aria-hidden="true"></i><span class="tabName">&nbsp;Logs</span></button>
+        <img id="imgCARMAIconColor" src="images/CARMA_icon_color.png" style="width:80%; height:20%;  display:block; padding-top: 20px; padding-left: 20px;" />
     </div>
     <div class="tabindicators">
         <button id="btnACCPrimed" disabled><img id="imgACCPrimed" src="images/acc_primed.png" style="width: 40px; height: 40px;" /></button>
