Additional updates based on latest conversation

--- a/website/index.html
+++ b/website/index.html
@@ -72,7 +72,7 @@
 <div id="divSystemAdvisory" align="center">
     <img id="imgCARMAColor" src="images/CARMA_color.png" style="width:50%; height:50%;" />
     <h1 style="color: blue">
-        Welcome to CAV Prototype I
+        Welcome to CARMA Platform
         <br/>
     </h1>
     <h2 id="warning">
