--- a/website/logout.html
+++ b/website/logout.html
@@ -29,7 +29,7 @@
 </noscript>
 <div id="divSystemAdvisory" align="center">
     <img id="imgCARMAColor" src="images/CARMA_color.png" style="width:50%; height:50%;" />
-    <h1 style="color: blue">Goodbye and thank you for using CAV Prototype I!</h1>
+    <h1 style="color: blue">Goodbye and thank you for using the CARMA Platform!</h1>
 
     <!--<h2 style="color: red"><u>System Advisory</u></h2>-->
     <h2 id="warning">
