--- a/website/index.html
+++ b/website/index.html
@@ -16,7 +16,7 @@
 -->
 <html>
 <head>
-    <title>CAV Prototype I</title>
+    <title>CARMA Platform</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
