--- a/website/logout.html
+++ b/website/logout.html
@@ -16,7 +16,7 @@
 -->
 <html>
 <head>
-    <title>CAV Prototype I</title>
+    <title>CARMA Platform</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
     <meta name="mobile-web-app-capable" content="yes">
