--- a/website/main.html
+++ b/website/main.html
@@ -16,6 +16,7 @@
 -->
 <html>
 <head>
+    <title>CARMA Platform</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="mobile-web-app-capable" content="yes" />
