Changes in response to PR review

--- a/website/lanesample.html
+++ b/website/lanesample.html
@@ -19,7 +19,7 @@
 
     <script>
         if (!SVG.supported) {
-            alert('SVG not supported. Some images will not be displayed.');
+            console.log('SVG not supported. Some images will not be displayed.');
         }
 
         var rect_index = 0;
