Reverted changes. Checkedin integration branch changes by mistake.

--- a/website/main.html
+++ b/website/main.html
@@ -97,7 +97,7 @@
         </button>
     </div>
     <div class="tabheader">
-        <button id="btnCAVGuidance" onclick="activateGuidance();" title="Guidance" class="button_cav button_disabled" disabled="true">Guidance</button>
+        <button id="btnCAVGuidance" onclick="activateGuidance();" title="CAV Guidance" class="button_cav button_disabled" disabled="true">CAV Guidance</button>
         <object id="objLightBarStatus" type="image/svg+xml" data="images/vehicle_lightbar.svg" style="width:100%; height: 20px; text-align:center; display: inline-block;">
             Your browser does not support SVG
         </object>
