--- a/website/main.html
+++ b/website/main.html
@@ -38,16 +38,19 @@
     <!-- Widget Framework -->
     <script src="scripts/carma.config.js"></script>
     <script src="scripts/carma.widgetfw.js"></script>
-
-    <script src="thirdparty/ros/eventemitter2.min.js"></script>
-    <script src="thirdparty/ros/roslib.min.js"></script>
     <script src="scripts/control.js" defer></script>
     <script src="scripts/rosbridge.js" defer></script>
+
+    <!-- Third Party-->
+    <script src="thirdparty/ros/eventemitter2.min.js"></script>
+    <script src="thirdparty/ros/roslib.min.js"></script>
     <script src="scripts/googlemap.js"></script>
-    <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMzV4biqVN0pf3l1lYVWQ4KSWLyoG6OV0&callback=initMap">
-    </script>
     <script src="thirdparty/svg/svg.min.js" defer></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMzV4biqVN0pf3l1lYVWQ4KSWLyoG6OV0&callback=initMap"></script>
+
+    <!-- Third Party - MsgPop -->
+    <link rel = "stylesheet" href = "thirdparty/jquery-plugins/jquery.msgPop.css"/>
+    <script src = "thirdparty/jquery-plugins/jquery.msgPop.js"></script>
 
     <!-- START: favicon image references for different devices-->
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
@@ -68,6 +71,7 @@
     <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!-- END: favicon -->
+
 </head>
 <body>
     <div class="tab">
@@ -104,7 +108,6 @@
     </div>
     <div id="divCapabilities" class="tabcontent">
         <div id="divCapabilitiesMessage" class="message_box">Welcome!</div>
-        <div id="divRoutes" align="center"></div>
         <div id="divSubCapabilities" hidden align="center">
         </div>
     </div>
@@ -222,24 +225,35 @@
         <div id="modalUIInstructionsContent">
         </div>
     </div>
+
+    <!-- Used by showModal() warning sound. E.g. FATAL, DISENGAGE, SHUTDOWN, LEFTROUTE-->
     <audio id="audioAlert1" preload="auto">
         <source src="sound/not-kiddin.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
+    <!-- Used by showModal() success sound. E.g. ROUTE COMPLETED -->
     <audio id="audioAlert2" preload="auto">
         <source src="sound/sunny.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
+    <!-- Used by INACTIVE guidance -->
     <audio id="audioAlert3" preload="auto">
         <source src="sound/hurry.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
+    <!-- Used by showModalNoAck sounds E.g. Lane Change -->
     <audio id="audioAlert4" preload="auto">
         <source src="sound/arp.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
+    <!-- Used by MsgPopUp sound for warning and caution -->
+    <audio id="audioAlert5" preload="auto">
+        <source src="sound/toneb.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 </body>
 <footer>
+
     <p class="copyright"></p>
     <p class="systemversion">&nbsp;</p>
 </footer>
