updated to re-apply googlemaps reference

--- a/website/main.html
+++ b/website/main.html
@@ -46,7 +46,7 @@
     <script src="thirdparty/ros/roslib.min.js"></script>
     <script src="scripts/googlemap.js"></script>
     <script src="thirdparty/svg/svg.min.js" defer></script>
-    <!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMzV4biqVN0pf3l1lYVWQ4KSWLyoG6OV0&callback=initMap"></script>-->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMzV4biqVN0pf3l1lYVWQ4KSWLyoG6OV0&callback=initMap"></script>
 
     <!-- Third Party - MsgPop -->
     <link rel = "stylesheet" href = "thirdparty/jquery-plugins/jquery.msgPop.css"/>
