address debugMode and waiting time errors

--- a/website/index.html
+++ b/website/index.html
@@ -92,7 +92,7 @@
                                 </button>
                             </div>
                             <div class="modal-body" style="text-align: left;"> 
-                                <p>"Debug Mode" provides the option to launch the backend services when clicking the "Start" button.</p>    
+                                <p>"Debug Mode" provides the option to not launch the backend services when clicking the "Start" button.</p>    
                                 <p>"Record ROSbag" option enables or disables logging when the platform backend services are running.</p>                                                             
                             </div>
                             <div class="modal-footer">
@@ -114,7 +114,7 @@
                             <div style="margin: 5px auto;">
                                 <input type="checkbox" data-toggle="switchbutton" data-onstyle="success" data-size="lg" 
                                     onchange="document.getElementById('rosBagEnabler').disabled = !this.checked;" 
-                                    id="cbDebugMd" name="cbDebugMd" checked="checked" />
+                                    id="cbDebugMd" name="cbDebugMd" />
                                 <label for="cbdebugMd"  class="card-text">Debug Mode</label>
                             </div>     
                             <div style="margin: 5px auto;">
