update code comments and address PR comments Please proceed with caution

--- a/website/main.html
+++ b/website/main.html
@@ -180,7 +180,7 @@
                   <div class="card-body" >
                     <p class="card-text warning-messages">
                         <i class="fas fa-exclamation-triangle"></i>
-                        <span>Please proceed with caution, any changes to these plugins will change vehicle behavior</span>                       
+                        <span>Please proceed with caution. Any changes to these plugins will change vehicle behavior.</span>                       
                     </p>
 
                     <hr>
