test route, add control handover warning/caution message pop and update vehicle commands, add sound

--- a/website/index.html
+++ b/website/index.html
@@ -91,12 +91,13 @@
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
+                            <hr>
                             <div class="modal-body" style="text-align: left;"> 
                                 <p>"Debug Mode" provides the option to not launch the backend services when clicking the "Start" button.</p>    
                                 <p>"Record ROSbag" option enables or disables logging when the platform backend services are running.</p>                                                             
                             </div>
                             <div class="modal-footer">
-                            <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-success btn-lg" data-dismiss="modal">CLOSE</button>
                             </div>
                         </div>
                         </div>
