--- a/website/main.html
+++ b/website/main.html
@@ -182,7 +182,7 @@
 
         <!--Route Selection list-->
         <div id ="route-list-area" style="display: block;">
-            <div id="route-list-panel" style="color:white;background-color: #494747; width: 40vw;height: 90%; padding: 20px 20px 20px 35px;margin:20px;border-radius: 10px; overflow-y: scroll;">               
+            <div id="route-list-panel" style="position: relative;color:white;background-color: #494747; width: 40vw;height: 95%; padding: 20px 20px 20px 35px;margin:20px;border-radius: 10px; ;">               
                 <div class="container-title" style="color: rgb(188, 250, 63);width: 100%; display: block;font-weight: bolder;padding: 5px;margin-bottom: 10px;">
                   Select a Route
                   <span id = "clearRoutes" 
@@ -191,9 +191,11 @@
                         Clear
                   </span>
                 </div>
-                <div class="container-content " id='route-list-content'>
-                  <span id='route-list-content-no-route-available'>No Route Available</span> 
-                </div>               
+                <div class="container-content-wrapper " id='route-list-content-wrapper' style="height: calc(95% - 50px);position: relative;">
+                  <div class="container-content " id='route-list-content' style=" overflow-y: auto;position: relative; max-height:100%">
+                    <span id='route-list-content-no-route-available'>No Route Available</span> 
+                  </div>
+                </div>            
             </div>           
         </div>
        
