--- a/website/main.html
+++ b/website/main.html
@@ -31,7 +31,8 @@
         <!-- thirdparty js -->
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r99/three.js"></script> -->
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r99/three.module.min.js" type="module"></script> -->
-        <script src="https://threejs.org/build/three.js" ></script>
+        <!-- <script src="https://threejs.org/build/three.js" ></script> -->
+        <script src="thirdparty/three/three.js" ></script>
         <script src="thirdparty/jquery-3.5.1/jquery-3.5.1.min.js"></script>
         <script src="thirdparty/popper/popper.min.js" ></script>
         <script src="thirdparty/ros/eventemitter2.min.js"></script>
